fixed scrollbar

--- a/css/addstyle.css
+++ b/css/addstyle.css
@@ -17,3 +17,9 @@
 img {
      margin-bottom: 5%;
 }
+
+body {
+     -ms-overflow-style: none;
+     scrollbar-width: none;
+     scrollbar-color: transparent transparent;
+}
